fix text align center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -588,10 +588,6 @@ section {
   transform: scale(1);
 }
 
-.values p {
-  text-align: justify;
-}
-
 /*--------------------------------------------------------------
 # Counts
 --------------------------------------------------------------*/
